# rapidbot.rtos

doc/: Структура робота на автомобильном шасси.mm
high/host_radio/: dpfp.c  makefile
high_inputdemultiplexor/: Makefile.am  build.sh  configure.ac  dpfp.c  joystick.c  joystick.h
high_inputdemultiplexor/lib/: Makefile.am  debug_macros.h  rgi-adcparam.gob  rgi-inputdemultiplexor.gob  rgi-pwmparam.gob  rgi-stateparam.gob  rgi-timeparam.gob  rgi-usbscheduler.gob  rgi.pb-c.c  rgi.pb-c.h  rgi.proto  usbcommon.h
high_inputdemultiplexor/src/: Makefile.am  main.c
high_joystickclient/: Makefile.am  build.sh  configure.ac
high_joystickclient/src/: Makefile.am  main.c  pyprotoc.sh  rgi.proto
high_locator/: dpfp.c  fix_fft.c  main.c  makefile  plot.sh
high_locator/fft_001/: testfft.c  testmain.c
high_pytitc/: helloworld2.py  rapidclient.py  rapidserver.py  usblayer.py
high_usb-controller/: dpfp.c  dpfp.c.~1~  dpfp.c.~2~  dpfp.c.~3~  gtksteer.c  gtksteer_gui  makefile  makefile.~2~  simevo
low/host_radio/: Board.h  armusbocd.cfg  blinker.c  isrsupport.c  lowlevelinit.c  main.c  makefile  sam7flash.script  timerisr.c  timersetup.c
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7S256_Eclipse/RTOSDemo/: armusbocd.cfg  demo_at91sam7_h256_blink_flash.cmd  main.c  rtosdemo.map
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7S256_Eclipse/RTOSDemo/USB/: USB-CDC.c
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7S256_Eclipse/RTOSDemo/tr24a/: spi_isr.c  tr24a.c  tr24a.h
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/: BasicWEB.c  BasicWEB.c~  FreeRTOSConfig.h  FreeRTOSConfig.h.~2~  FreeRTOSConfig.h.~3~  FreeRTOSConfig.h~  Makefile  Makefile.~10~  Makefile.~11~  Makefile.~13~  Makefile.~2~  Makefile.~3~  Makefile.~4~  Makefile.~5~  Makefile.~6~  Makefile.~7~  Makefile.~8~  Makefile.~9~  Makefile~  lwipopts.h  lwipopts.h~  main.c  main.c.~2~  main.c.~3~  main.c.~4~  main.c.~5~  main.c.~6~  main.c~  rtosdemo.map  sam7flash.script.~1~  sam7flash.script.~2~
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/EMAC/: SAM7_EMAC.c  SAM7_EMAC.h  SAM7_EMAC.h~  SAM7_EMAC_ISR.c~  mii.h  mii.h~
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/ParTest/: ParTest.c
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/SrcAtmel/: Board.h.~2~
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/USB/: USB-CDC.c  USB-CDC.c.~2~  descriptors.h  usb.h  usb.h.~2~
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/aic/: aic.h
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/pio/: pio.h  pio_it.c
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/pwm/: pwm.h  pwm.h.~1~  pwm.h.~2~  pwm.h~  pwm_isr.c.~1~  pwm_isr.c~
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/pwmc/: pwmc.c.~2~
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/usr/: lcdtermtask.c  lcdtermtask.c.~2~  lcdtermtask.c.~3~  lcdtermtask.c.~4~  lcdtermtask.h  lcdtermtask.h.~2~
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/usr/liblcd/: lcd.c  lcd.c.~1~  lcd.h  lcdchar.c  lcdchartable.c  lcdscroll.c  lcdstr.c  libterm.c  libterm.h  libterm.h.~1~
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/webserver_old/: SAM7_EMAC.c  SAM7_EMAC.c.~2~  SAM7_EMAC.h  SAM7_EMAC_ISR.c
low/host_radio/FreeRTOS/Demo/ARM7_AT91SAM7X256_Eclipse/RTOSDemo/webserver_old/old/: SAM7_EMAC.c  uIP_Task.c
low/host_radio/FreeRTOS/Source/portable/GCC/ARM7_AT91SAM7S/: portISR.c
low/hover/: 2103_link_flash.cmd  crt.s  flash.script  lpc2103_armusbocd_tiny.cfg  lpc210x.h  main.c  main.dmp  makefile
low/hover/tr24a/: tr24a.c  tr24a.h
low_locator/RTOSDemo/: Makefile  common.h  common_structs.h  main.c  rtosdemo.map  sam7flash.script
low_locator/RTOSDemo/SrcAtmel/: Board.h
low_locator/RTOSDemo/USB/: USB-CDC.c
low_locator/RTOSDemo/adc/: adc.h
low_locator/RTOSDemo/compass/: compass_isr.c
low_locator/RTOSDemo/fft/: fix_fft.c  test_fix_fft.c
low_locator/RTOSDemo/flash/: armusbocd.cfg
low_locator/RTOSDemo/locator/: locator.c  locator.h  locator_isr.c  locator_task.c  locator_task.h
low_locator/RTOSDemo/offt/: bflymacro.h  fft.h  radix4fft.c  shuffletab.h
low_locator/RTOSDemo/proximity_sensor/: proximity_sensor.c  proximity_sensor_task.h
low_locator/RTOSDemo/spi/: spi.h
low_locator/RTOSDemo/tc/: tc.h
low_rtos/FreeRTOS/Source/portable/GCC/ARM7_AT91SAM7S/: AT91SAM7S256.h  port.c
low_usb-controller/RTOSDemo/: FreeRTOSConfig.h  Makefile  Makefile.~1~  Makefile.~2~  Makefile.~3~  Makefile.~4~  armusbocd.cfg~  boot.s  common.h  common.h.~2~  common.h.~3~  common_structs.h  main.c  main.c.~1~  openocd_go_flash.sh  rtosdemo.map
low_usb-controller/RTOSDemo/USB/: USB-CDC.c  USB-CDC.c.~1~  USBIsr.c  descriptors.h  usb.h
low_usb-controller/RTOSDemo/adc/: adc.c
low_usb-controller/RTOSDemo/aic/: aic.c  aic.h
low_usb-controller/RTOSDemo/compass/: compass.c  compass.h  compass_task.c  compass_task.h
low_usb-controller/RTOSDemo/fft/: fix_fft.h
low_usb-controller/RTOSDemo/flash/: sam7flash.script
low_usb-controller/RTOSDemo/locator/: locator.h  locator_task.c  locator_task.h
low_usb-controller/RTOSDemo/pio/: pio.c  pio.h  pio_it.c
low_usb-controller/RTOSDemo/proximity_sensor/: proximity_sensor.c  proximity_sensor.h  proximity_sensor_isr.c  proximity_sensor_task.c
low_usb-controller/RTOSDemo/pwm/: pwm.h  pwm_isr.c
low_usb-controller/RTOSDemo/pwmc/: pwmc.c  pwmc.c.~1~
